--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,11 +1,7 @@
----
-kind: Deployment
 apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: nodejs-app
-  namespace: default
-  labels:
-    app: nodejs-app
 spec:
   replicas: 2
   selector:
@@ -32,13 +28,13 @@ spec:
           httpGet:
             path: /
             port: 3000
-          initialDelaySeconds: 30
+          initialDelaySeconds: 30  # Give more time to start
           periodSeconds: 10
         readinessProbe:
           httpGet:
             path: /
             port: 3000
-          initialDelaySeconds: 5
+          initialDelaySeconds: 10  # Give more time to start
           periodSeconds: 5
 ---
 apiVersion: v1
