--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "docker_web_app",
-    "version": "1.0.0",
-    "description": "Node.js on Docker",
-    "author": "First Last <first.last@example.com>",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js"
-    },
-    "dependencies": {
-      "express": "^4.16.1"
-    }
+  "name": "my-app",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node app.js",
+    "test": "jest --coverage --testResultsProcessor=\"jest-junit\"",
+    "dev": "nodemon app.js"
+  },
+  "devDependencies": {
+    "jest": "^29.0.0",
+    "jest-junit": "^15.0.0"
   }
+}
